--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsc",
     "start": "tsc && node dist/app.js",
-    "dev": "nodemon --inspect src/app.ts"
+    "dev": "nodemon --inspect src/app.ts",
+    "genEnv": "cp .env.sample .env"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
