--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^22.1.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "csv-parse": "^5.5.6",
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.5.2"
   }
 }
