--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "mysql2": "^3.11.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20"
   }
 }
