--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "commander": "^12.1.0",
     "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.2",
     "mysql2": "^3.11.0",
     "reflect-metadata": "^0.2.2",
